# master-search

./: .gitignore  README.md  ingestion.py  ingestion.yaml  master-search.ipynb  pyproject.toml
src/master_search/: crew.py  main.py
src/master_search/config/: agents.yaml  tasks.yaml
