[tool.poetry]
name = "master_search"
version = "0.1.0"
description = "master-search using crewAI"
authors = ["Cristian C dos Santos <perestra.ccds@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }
langchain_openai = "*"
ollama = "*"
langchain_experimental = "*"

[tool.poetry.scripts]
master_search = "master_search.main:run"
train = "master_search.main:train"
replay = "master_search.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
